# Bloop

./: .gitignore  3HDM_model_generation.wl  Dockerfile  README.md  pyproject.toml
Mathematica/: Sigma36_3HDM_DRalgo.wl  Z2_3HDM_DRalgo.wl  Z2_3HDM_DRalgoCPV.wl  Z2_3HDM_DRalgoGeneral.wl  bounded.txt
MathematicaFiles/: Z2_3HDM_DRalgo.wl
Running/: CompareStrengths.py  CountStrong.py  FindMissingFiles.py  PlotResult.py  SFOPTBM.py  Scan.sh  ScatterPlot.py  SubSetResults.py  Test.sh  parsedExpressions.json  runBenchmark.py  runStages.py  test.sh
Running/Benchmarks/: 3HDMHandPickedBM.py  3HDMScanBM.py  Benchmarks_3HDM.py  ScanSubSet.py
Running/IntegrationTests/: UnitAndIntegrationTests.sh
Running/ReferenceNumbaResults/: BM_1.json
Running/ReferenceTestComplexMassResults/: BM_1.json
Running/ReferenceTestResults/: BM_1.json  BM_1.txt
Running/ScatterPlottingTools/: .ScatterCompare.py.swp  FullScatterPlot.py  ScatterCompare.py  ScatterNormal.py
Testing/: MathematicaToPythonHelper.m
src/: CountStrong.py  SFOPTBM.py  UnitAndIntegrationTests.sh  UnitTests.py  parsedExpressions.json  runStages.py
src/Bloop/: EffectivePotential.py  GetLines.py  LoopBenchmarks.py  PDGData.py  ParsedExpression.py  PlotResult.py  PythoniseMathematica.py  TransitionFinder.py  UserInput.py  Z2_ThreeHiggsBmGenerator.py
src/IntegrationTests/: Benchmarks
src/PostProcessing/: CompareStrengths.py  CountStrong.py  FullScatterPlot.py  ScatterCompare.py  ScatterDeg.py  ScatterNormal.py
src/ScatterPlottingTools/: ScatterCompare.py
src/ThreeHiggs/: BetaFunctions.py  BmGenerator.py  Model.py  (+35 more)
(+82 files in other folders)
