[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ThreeHiggs"
dynamic = ["version"]
authors = [
    {name = "Lauri Niemi", email = "lauri.b.niemi@helsinki.fi"},
    {name = "Jasmine Thomson-Cooke", email = "jasmine@stp.dias.ie"}

]
description = "EWPT with three Higgses"
license = {text = "MIT"}
classifiers = [
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.5",
    "scipy>=1.9.0",
    "sympy>=1.12",
    "ijson"
]
readme = "README.md"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["ThreeHiggs"]

[tool.setuptools.package-data]
# specify data files relative to packages. These need to be located inside the package. Including files from outside packages is apparently deprecated
ThreeHiggs = ["Data/*", "Benchmarks/*"]


[tool.setuptools_scm]

[project.urls]
#"Homepage" = ""
"Repository" = "https://github.com/niemilau/ThreeHiggs"
